--- a/styles/seconPage.css
+++ b/styles/seconPage.css
@@ -13,8 +13,7 @@ header {
     width: 100vw;
     justify-content: space-between;
     padding: 1vh 0 1vh 0;
-    background-color: black;
-    position: sticky;
+    position: relative;
     top: 0;
 }
 
@@ -66,6 +65,7 @@ main {
     justify-content: space-around;
     align-items: center;
     flex-direction: column;
+    position: relative;
 }
 
 .mainWelcome {
@@ -90,6 +90,7 @@ footer {
     display: flex;
     flex-direction: column;
     align-items: center;
+    position: relative;
 }
 
 .info {
@@ -137,4 +138,9 @@ hr {
 
 footer p {
     color: white;
+}
+
+.video video {
+    width: 100vw;
+    position: fixed;
 }
