--- a/styles/main.css
+++ b/styles/main.css
@@ -5,6 +5,10 @@ html {
 body {
     margin: 0;
     background-color: black;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    color: #FFFFFF;
 }
 
 header {
@@ -14,7 +18,6 @@ header {
     justify-content: space-between;
     padding: 1vh 0 1vh 0;
     top: 0;
-    position: relative;
 }
 
     header .logo a img {
@@ -65,7 +68,6 @@ main {
     justify-content: space-around;
     align-items: center;
     flex-direction: column;
-    position: relative;
 }
 
 .mainWelcome {
@@ -150,15 +152,16 @@ hr {
     transition: 0.4s;
 }
 
-.video video {
-    width: 100vw;
-    position: fixed;
-}
-
-footer {
-    position: absolute;
-}
-
 footer p {
     color: white;
+}
+
+.backgroundPhoto {
+    width: 100vw;
+    height: 100vh;
+}
+
+.backgroundPhoto img {
+    width: 100vw;
+    position: fixed;
 }
