--- a/styles/seconPage.css
+++ b/styles/seconPage.css
@@ -5,6 +5,10 @@ html {
 body {
     margin: 0;
     background-color: black;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    color: #FFFFFF;
 }
 
 header {
@@ -13,7 +17,6 @@ header {
     width: 100vw;
     justify-content: space-between;
     padding: 1vh 0 1vh 0;
-    position: relative;
     top: 0;
 }
 
@@ -65,7 +68,6 @@ main {
     justify-content: space-around;
     align-items: center;
     flex-direction: column;
-    position: relative;
 }
 
 .mainWelcome {
@@ -90,7 +92,6 @@ footer {
     display: flex;
     flex-direction: column;
     align-items: center;
-    position: relative;
 }
 
 .info {
@@ -138,9 +139,4 @@ hr {
 
 footer p {
     color: white;
-}
-
-.video video {
-    width: 100vw;
-    position: fixed;
 }
