--- a/styles/seconPage.css
+++ b/styles/seconPage.css
@@ -5,10 +5,6 @@ html {
 body {
     margin: 0;
     background-color: black;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-    color: #FFFFFF;
 }
 
 header {
@@ -17,6 +13,7 @@ header {
     width: 100vw;
     justify-content: space-between;
     padding: 1vh 0 1vh 0;
+    position: relative;
     top: 0;
 }
 
@@ -68,6 +65,7 @@ main {
     justify-content: space-around;
     align-items: center;
     flex-direction: column;
+    position: relative;
 }
 
 .mainWelcome {
@@ -92,6 +90,7 @@ footer {
     display: flex;
     flex-direction: column;
     align-items: center;
+    position: relative;
 }
 
 .info {
@@ -139,4 +138,9 @@ hr {
 
 footer p {
     color: white;
+}
+
+.video video {
+    width: 100vw;
+    position: fixed;
 }
